# numerical-differentiation

./: Cargo.toml  README.md
src/: lib.rs
